[gd_scene load_steps=6 format=3 uid="uid://bst1s3nmh6n5r"]

[ext_resource type="Script" path="res://win.gd" id="1_xwocy"]
[ext_resource type="AudioStream" uid="uid://dwqa3d4yndxd" path="res://sfx/win.wav" id="2_v8x8i"]
[ext_resource type="AudioStream" uid="uid://cvh0xe8cxih83" path="res://sfx/congrats you win.wav" id="3_1rl2y"]
[ext_resource type="AudioStream" uid="uid://bvm6cfmx3rbqw" path="res://sfx/boop.wav" id="3_deh56"]
[ext_resource type="AudioStream" uid="uid://c72r3ncw6n225" path="res://sfx/ping.wav" id="4_cqkc4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwocy")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 137.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 9
text = "Congrats! You won!
Your friend is scaling blue
mountain, all thanks to snakey!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 50.0
offset_right = 94.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 10
text = "Yay!
"

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v8x8i")

[node name="WinVoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1rl2y")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_deh56")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cqkc4")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
